Corrige problemas no codeblocks

--- a/doc/GDD.tex
+++ b/doc/GDD.tex
@@ -31,24 +31,27 @@
 	e puzzle, cujo objetivo é completar as fases colocando
 	bombas de forma estratégica para destruir obstáculos e
 	inimigos. O jogo difere do original por utilizar bananas
-	como bombas. Isto é explicado pela história do jogo, a seguir.
+	como bombas. Isto é explicado pela história do jogo, a
+	seguir.
 	
-	"No ano de 2534, depois de não existir mais nada de útil
+	``No ano de 2534, depois de não existir mais nada de útil
 	para ser descoberto ou inventado, cientistas resolvem
-	levar o termo 'banana de dinamite' ao pé da letra. A fruta
-	é modificada genéticamente, passando a entrar em estado de
-	combustão quando em contato com o ar. Os cientistas também
-	adicionaram à fruta a essência do Guaraná Antártica\textregistered.
-	Como é sabido em todo o universo, o refrigerante possui a 
-	famosa Energia Que Contagia\texttrademark. Com a combustão,
-	esta energia é liberada, gerando uma súbita explosão.
-	Todo o processo leva 3 segundos para ocorrer, contados a 
-	partir do momento em que a banana foi separada do cacho.
+	levar o termo `banana de dinamite' ao pé da letra. A
+	fruta é modificada genéticamente, passando a entrar em
+	estado de combustão quando em contato com o ar. Os
+	cientistas também adicionaram à fruta a essência do
+	Guaraná Antártica\textregistered.  Como é sabido em todo
+	o universo, o refrigerante possui a famosa Energia Que
+	Contagia\texttrademark. Com a combustão, esta energia é
+	liberada, gerando uma súbita explosão.  Todo o processo
+	leva 3 segundos para ocorrer, contados a partir do
+	momento em que a banana foi separada do cacho.
 
 	Os cientistas tentaram manter a fruta em segredo, porém
 	um grupo de marginais invadiu o laboratório e roubou o
-	produto, levando-o à venda no merdado negro. Você joga no
-	papel de um cidadão tentando sobreviver em meio ao caos."
+	produto, levando-o à venda no merdado negro. Você joga
+	no papel de um cidadão tentando sobreviver em meio ao
+	caos.''
 
 \section{Características}
 
@@ -66,7 +69,7 @@
 	A jogabilidade envolvida neste jogo é bem simples. O
 	jogo fica em uma tela única com uma vista de cima. Nesta
 	tela o jogador pode mover-se horizontalmente ou
-	verticalmente. Ao colocar uma bomba, que levará algum
+	verticalmente. Ao colocar uma banana, que levará algum
 	tempo até que se exploda, permitindo-lhe tempo para
 	fugir.
 
@@ -133,8 +136,8 @@
 		\item Ganhou
 		\item Perdeu
 		\item Pause
-		\item ColocouBomba
-		\item ExplodiuBomba
+		\item ColocouBanana
+		\item ExplodiuBanana
 	\end{itemize}
 
 	O projeto conta com os seguintes assets:
@@ -145,7 +148,7 @@
 
 				\item Personagem1
 				\item Personagem2
-				\item Bomba
+				\item Banana
 				\item Explosão
 
 			\end{itemize}
@@ -170,8 +173,8 @@
 				\item Ganhou
 				\item Perdeu
 				\item Pause
-				\item ColocouBomba
-				\item ExplodiuBomba
+				\item ColocouBanana
+				\item ExplodiuBanana
 
 			\end{itemize}
 
